--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,21 @@
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
+  font-weight: 400;
   line-height: 1.4em;
+  padding-top: 8px;
 }
 
-.search {
-  width: 50%;
-  float: left;
+input[type=search] {
+  border: 1px solid #eee;
+  box-shadow: none;
+}
+
+.search-results {
+  height: 600px;
+  overflow-y: scroll;
+  border: 1px solid #eee;
+  border-radius: 7px;
 }
 
 .search-results ul {
@@ -15,10 +24,67 @@ body {
 }
 
 .search-results li {
-  max-width: 480px;
-  margin-bottom: 0.5em;
+  cursor: pointer;
+  border: 1px solid #eee;
+  margin: 8px;
+  border-radius: 7px;
+  overflow: hidden;
 }
 
+.search-results li:hover {
+  background-color: #f5f5f5;
+  border-color: #ccc;
+}
+
+.search-results .media-heading {
+  padding-top: 8px;
+}
+
+.search-results .media-object {
+  border-right: 2px solid #eee;
+}
+
+.player-wrapper {
+  border: 1px solid #eee;
+  border-radius: 7px;
+}
+
+#player {
+  min-height: 360px;
+  text-align: center;
+}
+
+#player span {
+  margin-top: 100px;
+  font-size: 90px;
+  color: #ccc;
+  border: 13px dashed;
+  border-radius: 50%;
+  padding: 30px 21px 30px 38px;
+  opacity: 0.3;
+}
+
+.playlist {
+  list-style: none;
+  padding: 0;
+}
+
+.video {
+  border: 1px solid #f5f5f5;
+  padding: 7px;
+  border-radius: 5px;
+  margin: 8px 0;
+}
+
+.video .btn {
+  float: right;
+}
+
+.video p {
+  margin: 7px 5px 10px 5px;
+}
+
+/*
 .search-results h2 {
   font-size: 14px;
   font-weight: 300;
@@ -31,4 +97,4 @@ body {
 
 .search-results img {
   max-width: 100%;
-}
+}*/
