--- a/css/style.scss
+++ b/css/style.scss
@@ -1,48 +1,63 @@
+$border-color: #eee;
+$border: 1px solid $border-color;
+$border-radius: 7px;
+
+
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-weight: 300;
   line-height: 1.4em;
-  padding-top: 8px; }
+  padding-top: 8px;
+}
 
 input[type=search] {
   border: 1px solid #eee;
-  box-shadow: none; }
+  box-shadow: none;
+}
 
 .search-results {
   height: 600px;
   overflow-y: scroll;
   border: 1px solid #eee;
-  border-radius: 7px; }
+  border-radius: 7px;
+}
 
 .search-results ul {
   list-style: none;
-  padding: 0; }
+  padding: 0;
+}
 
 .search-results li {
   cursor: pointer;
   border: 1px solid #eee;
   margin: 8px;
   border-radius: 7px;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .search-results li:hover {
   background-color: #f5f5f5;
-  border-color: #ccc; }
+  border-color: #ccc;
+}
 
 .search-results .media-heading {
-  padding-top: 8px; }
+  padding-top: 8px;
+}
 
 .search-results .media-object {
-  border-right: 2px solid #eee; }
+  border-right: 2px solid #eee;
+}
 
 .player-wrapper {
   border: 1px solid #eee;
-  border-radius: 7px; }
+  border-radius: 7px;
+}
 
 #player {
   min-height: 360px;
-  text-align: center; }
+  text-align: center;
+}
 
 #player span {
   margin-top: 100px;
@@ -51,23 +66,28 @@ input[type=search] {
   border: 13px dashed;
   border-radius: 50%;
   padding: 30px 21px 30px 38px;
-  opacity: 0.3; }
+  opacity: 0.3;
+}
 
 .playlist {
   list-style: none;
-  padding: 0; }
+  padding: 0;
+}
 
 .video {
   border: 1px solid #f5f5f5;
   padding: 7px;
   border-radius: 5px;
-  margin: 8px 0; }
+  margin: 8px 0;
+}
 
 .video .btn {
-  float: right; }
+  float: right;
+}
 
 .video p {
-  margin: 7px 5px 10px 5px; }
+  margin: 7px 5px 10px 5px;
+}
 
 /*
 .search-results h2 {
