Show currently playing track

--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -118,6 +118,10 @@ input[type=search] {
   margin: 7px 5px 10px 5px;
 }
 
+.video-current {
+  font-weight: 500;
+}
+
 /*
 .search-results h2 {
   font-size: 14px;
